# nvg-remote

./: .gitmodules  CMakeLists.txt  api.h  client  draw.nvg  nvg_remote  out.c  parseapi.js  server
src/: client.c  nvgr_client.c  nvgr_client.h  nvgr_common.h  nvgr_server.c  nvgr_server.h  server.c
